--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-
     provided 'com.google.auto.value:auto-value:1.5.1'
     apt 'com.google.auto.value:auto-value:1.5.1'
 
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.8.0'
 }
